# fastai

./: CONTRIBUTING.md  Makefile  pyproject.toml
src/: constants.py  main.py
src/routes/: users.py
